syntax/core.bnf
<program> ::= <item> | <item> <program>

<item> ::= <binding> ";" | <print> ";"

<binding> ::= <ident> "::" <expr>

<print> ::= "print" <expr>
          | "print" "typeof" <expr>

<expr> ::= <if> | <fn> | <cmp>

<if> ::= "if" <expr> "then" <expr> "else" <expr>

<fn> ::= "fn" <ident> "->" <expr>

<cmp> ::= <add>
        | <add> <cmp_op> <add>

<cmp_op> ::= "==" | "<>" | "<" | ">" | "<=" | ">="

<add> ::= <mul>
        | <add> "+" <mul>
        | <add> "-" <mul>

<mul> ::= <pow>
        | <mul> "*" <pow>
        | <mul> "/" <pow>
        | <mul> "%" <pow>

<pow> ::= <app>
        | <app> "^" <pow>

<app> ::= <atom> | <app> <atom>

<atom> ::= "true"
         | "false"
         | <num>
         | <ident>
         | "(" <expr> ")"

<num> ::= <digits> | <digits> "." <digits>

<ident> ::= <start> | <start> <rest>

<rest> ::= <char> | <char> <rest>

<char> ::= <start> | <digit>

<start> ::= <letter>

<digits> ::= <digit> | <digit> <digits>

<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
           | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
           | "u" | "v" | "w" | "x" | "y" | "z"
           | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
           | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
           | "U" | "V" | "W" | "X" | "Y" | "Z"
